fix to high z-index was over cart

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -90,7 +90,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  z-index: 1000;
+  z-index: 10;
 }
 
 /*
